--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script language="JavaScript">
     function WinOpen_Jajdyk()
  {
- window.open("index.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+ window.open("zadanie_1.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 
  }
  
