--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 {
 window.open("zadanie_2.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
 }
+	
+	function WinOpen_Jajdyk_3() 
+
+{
+window.open("zadanie_3.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
+}
   </script>
 
 <style> 
@@ -56,7 +62,7 @@ td, th
     <tr> 
     <td id="body"> <input type="button" name="przycisk" value="przyklad_1 dzialanie" onclick="WinOpen_Jajdyk(' ')">      </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_2 "           onclick="WinOpen_Jajdyk_2(' ')">    </td>
-    <td id="body"> </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_3 "           onclick="WinOpen_Jajdyk_3(' ')">    </td>
     <td id="body"> </td>
     <td id="body"> </td>
     </tr>
