--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </head>
             <body>
 <script language="JavaScript">
-    function WinOpen_Jajdyk()
+    	function WinOpen_Jajdyk()
  {
  window.open("zadanie1.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 
@@ -58,7 +58,7 @@ td, th
 </style>
 
 <table>
-    <tr><td colspan="5" id="head">Jajdyk</td></tr>
+    <tr><td colspan="5" id="head"> Patryk Jajdyk, 2p</td></tr>
     <tr> 
     <td id="body"> <input type="button" name="przycisk" value="przyklad_1 dzialanie" onclick="WinOpen_Jajdyk(' ')">      </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_2 "           onclick="WinOpen_Jajdyk_2(' ')">    </td>
