--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ window.open("zadanie_2.html","okienko","toolbar=no,directories=no,menubar=no,hei
 {
 window.open("zadanie_3.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
 }
+	function WinOpen_Jajdyk_4() 
+
+{
+window.open("zadanie_4.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
+}
   </script>
 
 <style> 
@@ -63,7 +68,7 @@ td, th
     <td id="body"> <input type="button" name="przycisk" value="przyklad_1 dzialanie" onclick="WinOpen_Jajdyk(' ')">      </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_2 "           onclick="WinOpen_Jajdyk_2(' ')">    </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_3 "           onclick="WinOpen_Jajdyk_3(' ')">    </td>
-    <td id="body"> </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_4 "           onclick="WinOpen_Jajdyk_4(' ')">    </td>
     <td id="body"> </td>
     </tr>
 </table>
