--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ window.open("zadanie_3.html","okienko","toolbar=no,directories=no,menubar=no,hei
 {
 window.open("zadanie_4.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
 }
+	function WinOpen_Jajdyk_5() 
+
+{
+window.open("zadanie_5.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
+}
   </script>
 
 <style> 
@@ -69,7 +74,7 @@ td, th
     <td id="body"> <input type="button" name="przycisk" value="zadanie_2 "           onclick="WinOpen_Jajdyk_2(' ')">    </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_3 "           onclick="WinOpen_Jajdyk_3(' ')">    </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_4 "           onclick="WinOpen_Jajdyk_4(' ')">    </td>
-    <td id="body"> </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_5 "           onclick="WinOpen_Jajdyk_5(' ')">    </td>
     </tr>
 </table>
 
