--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@ window.open("zadanie_4.html","okienko","toolbar=no,directories=no,menubar=no,hei
 {
 window.open("zadanie_5.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
 }
+	function WinOpen_Jajdyk_6() 
+
+{
+window.open("zadanie_6.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
+}
+	function WinOpen_Jajdyk_7() 
+
+{
+window.open("zadanie_7.html","okienko","toolbar=no,directories=no,menubar=no,height=150,width=360,top=610,left=550");
+}	
   </script>
 
 <style> 
@@ -75,6 +85,8 @@ td, th
     <td id="body"> <input type="button" name="przycisk" value="zadanie_3 "           onclick="WinOpen_Jajdyk_3(' ')">    </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_4 "           onclick="WinOpen_Jajdyk_4(' ')">    </td>
     <td id="body"> <input type="button" name="przycisk" value="zadanie_5 "           onclick="WinOpen_Jajdyk_5(' ')">    </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_6 "           onclick="WinOpen_Jajdyk_6(' ')">    </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_7 "           onclick="WinOpen_Jajdyk_7(' ')">    </td>	   
     </tr>
 </table>
 
