--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
 <script language="JavaScript">
     	function WinOpen_Jajdyk()
  {
- window.open("zadanie1.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+ window.open("zadanie1.html","okienko");
 
  }
  
 	function WinOpen_Jajdyk_2() 
 
 {
-window.open("zadanie_2.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_2.html","okienko");
 }
 	
 	function WinOpen_Jajdyk_3() 
 
 {
-window.open("zadanie_3.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_3.html","okienko");
 }
 	function WinOpen_Jajdyk_4() 
 
 {
-window.open("zadanie_4.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_4.html","okienko");
 }
 	function WinOpen_Jajdyk_5() 
 
 {
-window.open("zadanie_5.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_5.html","okienko");
 }
 	function WinOpen_Jajdyk_6() 
 
 {
-window.open("zadanie_6.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_6.html","okienko");
 }
 	function WinOpen_Jajdyk_7() 
 
 {
-window.open("zadanie_7.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_7.html","okienko");
 }
 	function WinOpen_Jajdyk_8() 
 
 {
-window.open("zadanie_8.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("zadanie_8.html","okienko");
 }	
   </script>
 
