--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@ window.open("zadanie_8.html","okienko");
 {
 window.open("zadanie_9.html","okienko");
 }
+
+	function WinOpen_Jajdyk_10() 
+
+{
+window.open("zadanie_10.html","okienko");
+}
   </script>
 
 <style> 
@@ -91,15 +97,16 @@ td, th
 <table>
     <tr><td colspan="9" id="head"> Patryk Jajdyk, 2p</td></tr>
     <tr> 
-    <td id="body"> <input type="button" name="przycisk" value="przyklad_1 dzialanie" onclick="WinOpen_Jajdyk_1(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_2 "           onclick="WinOpen_Jajdyk_2(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_3 "           onclick="WinOpen_Jajdyk_3(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_4 "           onclick="WinOpen_Jajdyk_4(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_5 "           onclick="WinOpen_Jajdyk_5(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_6 "           onclick="WinOpen_Jajdyk_6(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_7 "           onclick="WinOpen_Jajdyk_7(' ')">    </td>
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_8 "           onclick="WinOpen_Jajdyk_8(' ')">    </td>	
-    <td id="body"> <input type="button" name="przycisk" value="zadanie_9 "           onclick="WinOpen_Jajdyk_9(' ')">    </td>	
+    <td id="body"> <input type="button" name="przycisk" value="przyklad_1 dzialanie " onclick="WinOpen_Jajdyk_1(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_2  "           onclick="WinOpen_Jajdyk_2(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_3  "           onclick="WinOpen_Jajdyk_3(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_4  "           onclick="WinOpen_Jajdyk_4(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_5  "           onclick="WinOpen_Jajdyk_5(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_6  "           onclick="WinOpen_Jajdyk_6(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_7  "           onclick="WinOpen_Jajdyk_7(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_8  "           onclick="WinOpen_Jajdyk_8(' ')">     </td>	
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_9  "           onclick="WinOpen_Jajdyk_9(' ')">     </td>
+    <td id="body"> <input type="button" name="przycisk" value="zadanie_10 "           onclick="WinOpen_Jajdyk_10(' ')">    </td>
     </tr>
 </table>
 
